Clean up of the build